--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "files.associations": {
-        "spinlock.h": "c"
+        "spinlock.h": "c",
+        "param.h": "c",
+        "proc.h": "c",
+        "riscv.h": "c",
+        "memlayout.h": "c",
+        "defs.h": "c",
+        "types.h": "c",
+        "user.h": "c",
+        "fcntl.h": "c"
     }
 }
