--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "types.h": "c",
         "stat.h": "c",
         "user.h": "c",
-        "stdarg.h": "c"
+        "stdarg.h": "c",
+        "riscv.h": "c",
+        "proc.h": "c",
+        "memlayout.h": "c"
     }
 }
