--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "types.h": "c",
         "memlayout.h": "c",
         "riscv.h": "c",
-        "net.h": "c"
+        "net.h": "c",
+        "memory": "c"
     }
 }
