--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "memlayout.h": "c",
         "riscv.h": "c",
         "net.h": "c",
-        "memory": "c"
+        "memory": "c",
+        "param.h": "c",
+        "semaphore": "c",
+        "stop_token": "c"
     }
 }
